# Chatbot-Rust

./: .gitignore  Cargo.toml
app-terminal/: Cargo.toml
app-terminal/src/: error.rs  main.rs  types.rs
database/: Cargo.toml
database/src/: lib.rs  types.rs  utils.rs
database/src/versions/: mod.rs  schema_v1.rs  schema_v2.rs
openai/: Cargo.toml
openai/src/: api_requestor.rs  error.rs  lib.rs  prelude.rs
src/: main.rs
src/openai/: api_requestor.rs  database.rs  mod.rs  prelude.rs  types.rs
