[package]
name = "ai"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["full"] }
spinners = "4.1.0"
clap = { version = "4.1.4", features = ["derive"] }
serde_variant = "0.1.2"
