[package]
name = "ai"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openai = { path = "../openai" }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.25.0", features = ["full"] }
clap = { version = "4.1.4", features = ["derive"] }
spinners = "4.1.0"
rusqlite = "0.28.0"
