[package]
name = "openai"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.14", features = ["json", "socks"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
serde_variant = "0.1.2"
rusqlite = "0.28.0"
chrono = "0.4.23"
